force-app/main/default/objects/tdc_tsw__SmsConfig__c/fields/tdc_cti__Click_To_Dial_Fields__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Click_To_Dial_Fields__c</fullName>
    <description>This field is used to store Click To Dial formula fields.</description>
    <label>Click To Dial Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>