force-app/main/default/objects/tdc_tsw__SmsConfig__c/fields/tdc_cti__CTI_Incoming_Call_Fields_Label__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__CTI_Incoming_Call_Fields_Label__c</fullName>
    <description>This field is used to store Softphone fields label for an incoming call.</description>
    <label>CTI Incoming Call Fields Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>