force-app/main/default/objects/tdc_tsw__SmsConfig__c/fields/tdc_cti__Default_SF1_Calling_Field__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Default_SF1_Calling_Field__c</fullName>
    <description>This field is used to define the default calling phone field from the SF1 mobile app.</description>
    <label>Default SF1 Calling Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>