force-app/main/default/objects/tdc_tsw__SmsConfig__c/fields/tdc_cti__DefaultPowerDialApi__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__DefaultPowerDialApi__c</fullName>
    <description>This field is used to store the default calling field for Power Dial.</description>
    <label>DefaultPowerDialApi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>