force-app/main/default/objects/tdc_tsw__SmsConfig__c/fields/tdc_cti__Priority__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Priority__c</fullName>
    <description>This field is used to store the record search priority for incoming/outgoing calls.</description>
    <label>Priority</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>