force-app/main/default/objects/tdc_tsw__SmsConfig__c/fields/tdc_tsw__Enable_Scheduler__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Enable_Scheduler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Scheduler</label>
    <type>Checkbox</type>
</CustomField>