force-app/main/default/objects/tdc_tsw__SmsConfig__c/fields/tdc_tsw__NameFieldApiName__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__NameFieldApiName__c</fullName>
    <label>Name Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>