force-app/main/default/objects/tdc_tsw__SmsConfig__c/fields/tdc_tsw__Object_Label__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Object_Label__c</fullName>
    <label>Object Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>