force-app/main/default/objects/tdc_tsw__SmsConfig__c/fields/tdc_tsw__WP_Fields__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__WP_Fields__c</fullName>
    <description>Fields required for whatsApp chrome plugin</description>
    <label>WP Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>